<resources>
    <string name="app_name">uTravel</string>
    <string name="departurePrompt">Departure Location: </string>
    <string name="departureDatePrompt">Departure Date: </string>
    <string name="departureDateHint">DD/MM/YYYY</string>
    <string name="tripDurationPrompt">Trip Duration: </string>
    <string name="budgetPrompt">Enter a Budget: </string>
    <string name="Submit">Submit</string>
    <string name="distancePrompt">Distance: </string>
    <string name="stylePrompt">Trip Style: </string>
    <string name="loadButton">Load Trip</string>
    <string-array name="tripTypes">
        <item>Sight Seeing</item>
        <item>Attractions</item>
        <item>Resort</item>
    </string-array>
    <string name="resultLocationPrompt">Location: </string>

    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>


    <string name="locationDefault">locationName</string>

    <string name="airportCodeDefault">AAA - BBB</string>
    <string name="flightTimeDefault">00:00 AM - 00:00 PM</string>
    <string name="flightAirlineDefault">airlineName</string>
    <string name="layoverDefault">Nonstop</string>
    <string name="priceDefault">$9999</string>

    <string name="hotelNameDefault">hotelName</string>
    <string name="hotelScoreDefault">0/0</string>
    <string name="hotelLocationDefault">hotelAdress</string>
</resources>
