<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/resultLocationPrompt"/>

        <TextView
            android:id="@+id/tripLocation"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/locationDefault"/>

    </LinearLayout>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/flight"/>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/flightCodes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/airportCodeDefault"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/flightTimeCodes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/flightTimeDefault"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/flightAirline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flightAirlineDefault"/>


        </LinearLayout>

        <TextView
            android:id="@+id/flightLayovers"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/layoverDefault"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/flightPrice"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/priceDefault"/>


    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/hotel"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hotelName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/hotelNameDefault"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/hotelScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/hotelScoreDefault"/>


        </LinearLayout>

        <TextView
            android:id="@+id/hotelPrice"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/priceDefault"/>

        <TextView
            android:id="@+id/hotelAddress"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/hotelLocationDefault"/>


    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>



</LinearLayout>
